--- a/day9/Cargo.toml
+++ b/day9/Cargo.toml
@@ -1,19 +1,12 @@
 [package]
-name = "day7"
+name = "day9"
 version = "0.1.0"
 authors = ["Martin Gabel <martin.gabel@icechair.de>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[lib]
-name = "intcode"
-path = "src/intcode.rs"
-
-[[bin]]
-name = "day7"
-path = "src/main.rs"
 
 [dependencies]
 log = "0.4.8"
 env_logger = "0.7.1"
-itertools = "0.8"
+day7 = { path = "../day7" }
