--- a/day9/Cargo.toml
+++ b/day9/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2018"
 [dependencies]
 log = "0.4.8"
 env_logger = "0.7.1"
-day7 = { path = "../day7" }
+intcode = { path = "../intcode" }
