--- a/day7/Cargo.toml
+++ b/day7/Cargo.toml
@@ -5,15 +5,9 @@ authors = ["Martin Gabel <martin.gabel@icechair.de>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[lib]
-name = "intcode"
-path = "src/intcode.rs"
-
-[[bin]]
-name = "day7"
-path = "src/main.rs"
-
 [dependencies]
 log = "0.4.8"
 env_logger = "0.7.1"
 itertools = "0.8"
+intcode = { path = "../intcode" }
+
