--- a/intcode/Cargo.toml
+++ b/intcode/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "day9"
+name = "intcode"
 version = "0.1.0"
 authors = ["Martin Gabel <martin.gabel@icechair.de>"]
 edition = "2018"
@@ -9,4 +9,3 @@ edition = "2018"
 [dependencies]
 log = "0.4.8"
 env_logger = "0.7.1"
-intcode = { path = "../intcode" }
